--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "sass": "^1.49.8"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@testing-library/react": "^12.1.3",
     "@vitejs/plugin-react": "^1.0.7",
+    "babel-jest": "^27.5.1",
+    "jest": "^27.5.1",
     "vite": "^2.8.0"
   }
 }
